# py-mb-mocks-manager

./: Makefile  pyproject.toml
.github/workflows/: publish.yml
example/: .env  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
example/apps/: utils.py  workers.py
example/apps/alice/: server.py
example/example/: workers.py
example/example/alice/: server.py
example/example/bob/: server.py
example/imposters/proxies/: bob.json
example/mmm_example/: utils.py  workers.py
example/mmm_example/alice/: server.py
example/mmm_example/bob/: server.py
example/tests/: conftest.py  test_example.py
mountebank_mocks_manager/: manager.py
