[tool.poetry]
name = "mountebank mocks manager example"
version = "0.1.0"
description = ""
authors = ["Oleksandr Draha <dr.draga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
requests = "^2.32.3"
pytest = "^8.3.4"
mountebank-mocks-manager = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
alice_server = "apps.workers:run_alice_server"
bob_server = "apps.workers:run_bob_server"

[tool.black]
skip-string-normalization = true
include = '(\.py$)'
target-version = ["py311"]
line-length = 88
